# pet_the_cat_tui

./: .gitignore  Cargo.toml  LICENSE  README.md  save.toml
locales/: tui.yml
src/: app.rs  handler.rs  lib.rs  localization.rs  main.rs  save.rs  ui.rs
